--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "cargo-my-bin"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
 edition = "2021"
-description = "list installed crates: a cargo subcommand to display the contents of ~/.cargo/bin/"
+description = "a cargo subcommand displaying the contents of ~/.cargo/bin/"
 readme = "README.md"
 repository = "https://github.com/piotrbajdek/cargo-my-bin"
 license = "UPL-1.0"
